# camel-scale

./: .gitignore  .pre-commit-config.yaml  poetry.toml  pyproject.toml
camel_scale/: __init__.py
camel_scale/kafka_server/: __init__.py  message_format.txt
camel_scale/kafka_server/consumer/: __init__.py  consumer.py
camel_scale/kafka_server/producer/: __init__.py  producer.py
camel_scale/kafka_server/set_up/: kafka_config.txt  server_home_path.txt  start_kafka.bat  start_servers.bat  start_zookeeper.bat
camel_scale/utils/: commons.py
examples/: kafka_message_queue.py
kafka_server/producer/: producer.py
kafka_server/test/producer/: test_producer.py
test/: test_consumer.py  test_kafka.py  test_kafka_deployment.py  test_producer.py
test/kafka_server/: test_producer_consumer_integration.py
test/utils/: test_utilis.py
